# travel-expensives-calculator

./: .env  .gitignore  .pdm.toml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: explanation.md  how-to-guides.md  index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
module/: cli.py  core.py  main.py  models.py
reference/: index.html
tests/: test_calculate_minimal_transactions.py  test_ui_print.py
travel-expensives-calculator/: cli.py  core.py  main.py  models.py
tutorials/: index.html
