[tool.pdm]

[project]
name = "travel-expenses-distributer"
version = "1.0"
description = "Calculates Transactions needed to distribite travel expenses evenly"
authors = [
    {name = "Cevin", email = "cevinneubauer@tum.de"},
]
dependencies = [
    "InquirerPy>=0.3.4",
    "Rich>=13.2.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]
docu = [
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-material>=9.0.6",
]

[tool.pdm.scripts]
start = "python3 travel-expensives-calculator/main.py"
test = "pytest"

[tool.pdm.dev-dependencies]
test = ["pytest"]